# persist

include/: persist.h  persist_unix.h
src/: CMakeLists.txt  persist.cpp  persist_unix.cpp  shared_data.h  test.cpp
